--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-*{
-    border: 0;
-    margin: 0;
-    box-sizing: border-box;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  border: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
